# rust-to-riches

./: .gitignore  Cargo.toml  README.md  ugly.txt
cli-calculator/: Cargo.toml
cli-calculator/src/: main.rs
company-directory/: Cargo.toml
company-directory/src/: main.rs
custom-error-types/: Cargo.toml
custom-error-types/src/: main.rs
game-of-life/: Cargo.toml
game-of-life/src/: main.rs
json-parser-formatter/: Cargo.toml
json-parser-formatter/src/: main.rs
mean-median-and-mode-finder/: Cargo.toml
mean-median-and-mode-finder/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: main.rs
nth-fibonacci-generator/: Cargo.toml
nth-fibonacci-generator/src/: main.rs
number-guessing-game/: Cargo.toml
number-guessing-game/src/: main.rs
pig-latin-converter/: Cargo.toml
pig-latin-converter/src/: main.rs
shape-area-calculator/: Cargo.toml
shape-area-calculator/src/: main.rs
simple-todo-list/: Cargo.toml
simple-todo-list/src/: main.rs
temp-converter/: Cargo.toml
temp-converter/src/: main.rs
