[workspace]
resolver = "3"
members = ["cli-calculator", "company-directory", "custom-error-types", "json-parser-formatter", "mean-median-and-mode-finder", "minigrep","nth-fibonacci-generator","number-guessing-game", "pig-latin-converter", "shape-area-calculator", "simple-todo-list","temp-converter"]


[workspace.dependencies]
rand = "0.10.0"
clap = "4.6.0"
serde = "1.0"
serde_json = "1.0"
